--- a/src/assets/CSS/style.scss
+++ b/src/assets/CSS/style.scss
@@ -59,6 +59,7 @@ body {
 }
 
 .active {
+    color: aliceblue;
     transition: border-radius 0.3s, background-color 0.3s;
     border-radius: 4px;
     background: lightcoral;
