--- a/src/assets/CSS/style.scss
+++ b/src/assets/CSS/style.scss
@@ -1,13 +1,13 @@
 body {
     margin: 0;
     padding: 0;
+    height: 100vh;
 }
 
 .conteiner {
     margin: 0 auto;
     width: 100%;
-    height: 100%;
-    border: 5px solid lightgreen;
+    height: 100vh;
 }
 
 .wrapper {
