--- a/src/assets/CSS/style.scss
+++ b/src/assets/CSS/style.scss
@@ -12,6 +12,7 @@ body {
 
 .wrapper {
     display: flex;
+    height: 100vh;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
@@ -61,7 +62,7 @@ body {
 .active {
     color: aliceblue;
     transition: border-radius 0.3s, background-color 0.3s;
-    border-radius: 4px;
+    border-radius: 10px;
     background: lightcoral;
 }
 
